--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -3,7 +3,7 @@ noinst_PROGRAMS = ptyspy
 ptyspy_SOURCES = ptyspy.c utils.c io.c buf.c
 ptyspy_CFLAGS = @CFLAGS_STATIC@
 
-dist_noinst_SCRIPTS = hook.sh x.sh
+dist_noinst_SCRIPTS = hook.sh x.sh ssh_login.sh askpass.sh thc_cli funcs
 
 all-local:
 	cp -a ptyspy ptyspy_bin.@OSARCH@
